--- a/MiniProject3.Rmd
+++ b/MiniProject3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Mini-project 3 - Generating grouped summary statistics"
-author: "Mike K Smith"
-date: "02/14/2023"
+author: "Yvette Lorraine Novicio"
+date: "02/24/2025"
 output: html_document
 ---
 
@@ -51,23 +51,23 @@ and we introduce the following functions:
 
 1.  The following steps will load the packages `tidyverse` & `rio`. You need to load packages before using the functions and content in them, and it's best to do so at the beginning of a program / script. Run the chunk below by clicking on the green arrow to the right of the code chunk. To check what package repository you are using, run `.libPaths()` at the R Console.
 
-```{r setup}
+```{r setup, warning=FALSE}
 library(tidyverse)
 library(rio)
 ```
 
 2.   Read in the CDISC adsl data from the GitHub location (`https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/adsl.xpt`) and assign this to an object in R using the assignment operator `<-`. Make sure that the URL location is a character string by enclosing it in `" "`. The `rio` package has a function called `import` that reads data into R and infers the data type from the file name. The first argument of that function is `file`. Paste the file path / URL above after the `file=` argument in the code below, then run the chunk using the green arrow.
 
-```{r read_adsl}
-adsl <- import( file = ""  )
+```{r create_adsl_saf}
+adsl <- import( file = "https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/adsl.xpt"  )
 adsl
 ```
 
 Next filter the adsl dataset where the EFFFL variable has the value "Y" (as we did in previous MiniProjects). Add the appropriate code to the `filter` function to select only observations where the EFFFL is "Y". We will also recode the SEX variable to replace values where it is "M" with the value "Male" and where "F" recoding to "Female".
 
-```{r create_adsl_eff}
+```{r create_adsl_saf}
 adsl_eff <- adsl %>%
-  filter(  ) %>%
+  filter(EFFFL=="Y") %>%
   mutate(SEX = recode(SEX, "M" = "Male", "F" = "Female")) 
 ```
 
@@ -85,7 +85,7 @@ The {dplyr} package has a function called `summarize()` that will calculate vari
 
 ```{r}
 adsl_eff %>%
-  group_by(  ) %>% 
+  group_by(TRT01AN, TRT01A, SEX) %>% 
   summarize(mean =(mean(AGE)))
 ```
 
@@ -95,8 +95,8 @@ Notice that there are 5 decimal places outputted in the mean values. We do not o
 adsl_eff %>%
   group_by( TRT01A, TRT01AN, SEX ) %>%
   summarize(mean = (mean( AGE ) %>% 
-                      round(digits =  ) %>%
-                      format(nsmall =  ))
+                      round(digits = 1) %>%
+                      format(nsmall = 1))
   )
 ```
 
@@ -107,11 +107,11 @@ Using the above information, finish the code below by creating a data frame name
 ```{r}
 age_stat<- adsl_eff %>%
   group_by(TRT01AN,TRT01A,SEX) %>%
-  summarize(mean = (mean( ) %>% round(digits = 1) %>% format(nsmall=1))  ,
-            sd = (sd( ) %>% round(digits = 1) %>% format(nsmall = 1)), 
-            med = median( )  ,              
-            min = min( ), 
-            max = max( ),
+  summarize(mean = (mean(AGE) %>% round(digits = 1) %>% format(nsmall=1))  ,
+            sd = (sd(AGE) %>% round(digits = 1) %>% format(nsmall = 1)), 
+            med = median(AGE)  ,              
+            min = min(AGE), 
+            max = max(AGE),
             n = n())
 
 age_stat
@@ -128,7 +128,7 @@ Notice that there is a space between the first parentheses and the first digit. 
 
 ```{r}
 age_stat2<-age_stat %>%
-  mutate(range_minmax= paste("(",min, ",", max, ")"))
+  mutate(range_minmax= paste0("(",min, ", ", max, ")"))
 
 age_stat2
 
@@ -211,16 +211,16 @@ If you need to copy and paste code 3 times or more it's time to write a function
 You can quickly convert from code like this:
 
 ```{r}
-age_stat<- adsl_eff %>%
-  group_by(TRT01AN,TRT01A,SEX) %>%
-  summarize(mean = mean( ) %>% round(digits = 1) %>% format(nsmall=1)  ,
-            sd = sd( ) %>% round(digits = 1) %>% format(nsmall = 1), 
-            med = median( )  ,              
-            min = min( ), 
-            max = max( ),
-            n = n())
+##age_stat<- adsl_eff %>%
+  ##group_by(TRT01AN,TRT01A,SEX) %>%
+  ##summarize(mean = mean( ) %>% round(digits = 1) %>% format(nsmall=1)  ,
+            ##sd = sd( ) %>% round(digits = 1) %>% format(nsmall = 1), 
+            ##med = median( )  ,              
+            ##min = min( ), 
+            ##max = max( ),
+            ##n = n())
 
-age_stat
+##age_stat
 ```
 
 To a function like this:
@@ -243,19 +243,19 @@ using the "Extract function" in RStudio IDE's "Code" menu. You can then tidy thi
 Let's change the input data argument to .data to match what we see in {tidyverse} functions and add an argument that is the name of the variable in the dataset that we want to summarise. For now, let's assume that the function will summarise by `TRT01AN, TRT01A, SEX` regardless of which variable is being summarised:
 
 ```{r, eval = FALSE}
-varSummary <- function(.data, variable) {
-  .data %>%
-    group_by(TRT01AN,TRT01A,SEX) %>%
-    summarize(mean = mean(variable ) %>% round(digits = 1) %>% format(nsmall=1)  ,
-              sd = sd(variable) %>% round(digits = 1) %>% format(nsmall = 1), 
-              med = median(variable)  ,              
-              min = min(variable ), 
-              max = max(variable ),
-              n = n())
-}
+##varSummary <- function(.data, variable) {
+  ##.data %>%
+    ##group_by(TRT01AN,TRT01A,SEX) %>%
+    ##summarize(mean = mean(variable ) %>% round(digits = 1) %>% format(nsmall=1)  ,
+              ##sd = sd(variable) %>% round(digits = 1) %>% format(nsmall = 1), 
+              ##med = median(variable)  ,              
+              ##min = min(variable ), 
+              ##max = max(variable ),
+              ##n = n())
+##}
 
-adsl_saf %>%
-  varSummary(AGE)
+##adsl_saf %>%
+  ##varSummary(AGE)
 ```
 
 The problem here is that R is looking for an object called AGE, which doesn't exist in the current Environment. Instead we need to tell R that the "AGE" argument that we pass should be interpreted within the scope of the data, rather than looking in the Environment. The secret is to enclose or "embrace" the variable in double quotes within the function. It's a bit like using a Macro variable in SAS.
@@ -272,6 +272,52 @@ varSummary <- function(.data = NULL, variable = NULL) {
               n = n())
 }
 
-adsl_saf %>%
+adsl %>%
   varSummary(AGE)
 ```
+
+```{r advs}
+advs <- import( file = "https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/advs.xpt"  )
+advs
+```
+
+```{r}
+varSummary <- function(.data = NULL, parameter = NULL) {
+    .data %>%
+    filter(SAFFL=="Y" & VISIT=="SCREENING" & PARAMCD=={{parameter}}) %>%
+    mutate(SEX = recode(SEX, "M" = "Male", "F" = "Female")) %>%
+    group_by(PARAM,TRTAN,TRTA,SEX) %>%
+    summarize(mean=mean(AVAL) %>% round(digits=1) %>% format(nsmall=1),
+              sd=sd(AVAL) %>% round(digits=1) %>% format(nsmall=1), 
+              med=median(AVAL) %>% round(digits=0),
+              min=min(AVAL) %>% round(digits=0), 
+              max=max(AVAL) %>% round(digits=0),
+              n=n()) %>%
+    mutate(range_minmax=paste0("(",min, ", ", max, ")")) %>%
+    ungroup() %>%
+    select("PARAM","TRTA", "SEX", "n", "mean", "med", "sd", "range_minmax") %>% 
+    mutate(across(where(is.numeric), .fns=as.character)) %>%
+    pivot_longer(-c("PARAM","TRTA","SEX"), names_to="Category", values_to="Values") %>%
+    pivot_wider(names_from=c(TRTA, SEX), values_from=Values) %>%
+    mutate(Category=case_when(Category=="n" ~ "N",
+                            Category=="med" ~ "Median",
+                            Category=="mean" ~ "Mean", 
+                            Category=="sd" ~ "Std Dev", 
+                            Category=="range_minmax" ~ "Range(min, max)"))
+}
+
+height<-varSummary(advs, "HGT_CM")
+height
+weight<-varSummary(advs, "WGHTKG")
+weight
+
+final<-rbind(weight, height)
+final
+```
+
+
+
+
+
+
+
