--- a/MiniProject4.Rmd
+++ b/MiniProject4.Rmd
@@ -224,8 +224,145 @@ dm_allcomb
 
 1.  Reorder the age variables to be in the correct order (<65, 65-80, >80)
 
+```{r}
+dm_allcomb <- dm_allcomb %>%
+ mutate(sortn = case_when(
+ category == "<65" ~ 1,
+ category == "65-80" ~ 2,
+ category == ">80" ~ 3,
+ category == "N" ~ 4,
+ category == "Mean" ~ 5,
+ category == "Median" ~ 6,
+ category == "Std Dev" ~ 7,
+ category == "Range(min,max)" ~ 8
+ ))
+
+dm_allcomb1 <- dm_allcomb[order(dm_allcomb$sortn), ]
+dm_allcomb1
+```
+
 2.  Move N before Age- categories.
 
+```{r}
+dm_allcomb2 <- bind_rows(dm_allcomb1[4,], dm_allcomb1[1:3,], dm_allcomb1[5:8,])  
+dm_allcomb2
+```
+
 3.  Add Ethnicity and Race.
+
+```{r merging data frames for Ethnicity}
+adsl_eff$ETHNIC <- str_to_title(adsl_eff$ETHNIC)
+
+ethnic_N_cnt <- adsl_eff %>%
+  group_by(TRT01AN, TRT01A, ETHNIC) %>%
+  count(name = "ethnic_total")
+
+ethnic_n_cnt <- adsl_eff %>%
+  group_by(TRT01AN, TRT01A, SEX, ETHNIC) %>%
+  count(name = "ethnic_n")
+
+ethnic_mrg_cnt <- ethnic_n_cnt %>% 
+  left_join(ethnic_N_cnt, 
+            by = c("TRT01AN", "TRT01A", "ETHNIC"))
+
+ethnic_mrg_cnt2 <- ethnic_mrg_cnt %>% 
+  left_join(Big_N_cnt, 
+            by = c("TRT01AN", "TRT01A"))
+
+ethnic_mrg_cnt3 <- ethnic_mrg_cnt2 %>% 
+  left_join(small_n_cnt, 
+            by = c("TRT01A", "TRT01AN", "SEX"))
+
+ethnic_mrg_cnt3 <- ungroup(ethnic_mrg_cnt3)
+```
+
+```{r creating percents for Ethnicity}
+ethnic_data_new <- ethnic_mrg_cnt3 %>% 
+  mutate(perc_tot_ethnic = round((ethnic_total/N)*100, 1)) %>%                 
+  mutate(perc_ethnic = round((ethnic_n/n)*100,1))
+
+ethnic_pct <- ethnic_data_new %>%
+  mutate(perc_tchar_ethnic = format(perc_tot_ethnic, nsmall = 1)) %>%
+  mutate(perc_achar_ethnic = format(perc_ethnic, nsmall = 1))
+
+ethnic_n_pct <- ethnic_pct %>%
+  mutate(npct_ethnic = paste(ethnic_n, paste0("(", perc_achar_ethnic, ")"))) %>% 
+  select(ETHNIC, TRT01A, SEX, npct_ethnic)
+```
+
+```{r ethnic_cat}
+ethnic_trans <- pivot_wider(ethnic_n_pct, 
+                         names_from = c(TRT01A,SEX), 
+                         values_from = npct_ethnic, 
+                         values_fill = "0",
+                         names_sep = "_")
+
+ethnic_cat <- rename(ethnic_trans, category=ETHNIC)
+ethnic_cat %>%
+  arrange(category)
+```
+
+```{r merging data frames for Race}
+adsl_eff$RACE <- str_to_title(adsl_eff$RACE)
+
+race_N_cnt <- adsl_eff %>%
+  group_by(TRT01AN, TRT01A, RACE) %>%
+  count(name = "race_total")
+
+race_n_cnt <- adsl_eff %>%
+  group_by(TRT01AN, TRT01A, SEX, RACE) %>%
+  count(name = "race_n")
+
+race_mrg_cnt <- race_n_cnt %>% 
+  left_join(race_N_cnt, 
+            by = c("TRT01AN", "TRT01A", "RACE"))
+
+race_mrg_cnt2 <- race_mrg_cnt %>% 
+  left_join(Big_N_cnt, 
+            by = c("TRT01AN", "TRT01A"))
+
+race_mrg_cnt3 <- race_mrg_cnt2 %>% 
+  left_join(small_n_cnt, 
+            by = c("TRT01A", "TRT01AN", "SEX"))
+
+race_mrg_cnt3 <- ungroup(race_mrg_cnt3)
+```
+
+```{r creating percents for Race}
+race_data_new <- race_mrg_cnt3 %>% 
+  mutate(perc_tot_race = round((race_total/N)*100, 1)) %>%                 
+  mutate(perc_race = round((race_n/n)*100,1))
+
+race_pct <- race_data_new %>%
+  mutate(perc_tchar_race = format(perc_tot_race, nsmall = 1)) %>%
+  mutate(perc_achar_race = format(perc_race, nsmall = 1))
+
+race_n_pct <- race_pct %>%
+  mutate(npct_race = paste(race_n, paste0("(", perc_achar_race, ")"))) %>% 
+  select(RACE, TRT01A, SEX, npct_race)
+```
+
+```{r race_cat}
+race_trans <- pivot_wider(race_n_pct, 
+                         names_from = c(TRT01A,SEX), 
+                         values_from = npct_race, 
+                         values_fill = "0",
+                         names_sep = "_")
+
+race_cat <- rename(race_trans, category=RACE)
+race_cat %>%
+  arrange(category)
+```
+
+```{r Final Demographic Table}
+dm_allcomb3 <- rbind("", dm_allcomb2)
+dm_allcomb3[1,1] <- "Age Category, n (%)"
+race_cat[1,1] <- "Race, n (%)"
+race_cat <- rbind("", race_cat)
+ethnic_cat[1,1] <- "Ethnicity, n (%)"
+ethnic_cat <- rbind("", ethnic_cat)
+final <- bind_rows(dm_allcomb3, ethnic_cat, race_cat)
+final
+```
 
 Save the .RMD file on your desktop and click on the "Knit" button at the top of the file to render an HTML version of this document.
