--- a/MiniProject7.Rmd
+++ b/MiniProject7.Rmd
@@ -20,7 +20,7 @@ A function is a little like a SAS Macro. When you first write the function you w
 To illustrate this we will return an example from MiniProject 2 where we calculated the number of observations within a dataset and calculated numbers and proportions within a category. Recall that section
 
 ```{r}
-adsl_saf <- import("https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/adsl.xpt") %>%
+adsl_saf <- read_xpt("https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/adsl.xpt") %>%
     filter(SAFFL == "Y")
   
   Big_N_cnt <- adsl_saf %>%
@@ -151,7 +151,7 @@ Use the RStudio IDE `fun` snippet to create a function called "adsl_counts" base
 ```{r}
 
 adsl_counts <- function(dataFile){
- adsl_saf <- read_xpt(  ) %>%
+ adsl_saf <- read_xpt(dataFile) %>%
     filter(SAFFL == "Y")
   
   Big_N_cnt <-  adsl_saf %>%
@@ -224,7 +224,7 @@ My recommendation is to write the function, check that it works, THEN go back th
 
 ```{r}
 adsl_counts <- function(dataFile){
-    adsl_saf <- read_xpt(  ) %>%
+    adsl_saf <- read_xpt( data_file = dataFile ) %>%
     filter(SAFFL == "Y")
   
   Big_N_cnt <- adsl_saf %>%
@@ -268,7 +268,7 @@ Amend the function code below to instead calculate based on an input dataset, li
 
 ```{r}
 adsl_counts <- function(adsl_FilePath) {
-  adsl_saf <- read_xpt(   ) %>%
+  adsl_saf <- read_xpt( adsl_FilePath ) %>%
     filter(SAFFL == "Y")
   
   Big_N_cnt <-  adsl_saf   %>%
@@ -301,9 +301,8 @@ adsl_counts <- function(adsl_FilePath) {
 
 inFile <- "https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/adsl.xpt"
 
-table1 <- read_xpt(inFile) %>%
-    filter(SAFFL == "Y") %>%
-  adsl_counts()
+table1 <- 
+  adsl_counts(inFile)
 table1
 ```
 
@@ -338,3 +337,57 @@ In the code above we are allowing the user to pass the `digits` argument through
 ## Challenge
 
 Convert the code you wrote in the Mini Project 6 challenge into a function that takes an input `adlb` dataset and produces the graph. For an additional challenge, allow the user to specify the axes labels.
+
+```{r}
+
+#Load required libraries
+library(ggdist)
+library(cowplot)
+
+#Define graph function 
+graph <- function(adlb_FilePath, x_label, y_label) {
+
+  #Read the XPT file and filter to ALT parameter
+  ALT <- read_xpt(adlb_FilePath) %>%
+    filter(PARAMCD == "ALT")
+  
+  #Further filter ALT data for active phase and calculate week number
+  ALT2 <- ALT %>%
+    filter(VISITNUM > 3) %>%
+    mutate(WEEK = floor(ADY/7))
+
+  #Create a treatment factor ordered by TRTAN
+  TREATfac <- ALT2 %>%
+    select(TRTA, TRTAN) %>%
+    unique() %>%
+    arrange(TRTAN) %>%
+    mutate(TREATMENT = factor(TRTA, ordered = TRUE))
+
+  #Add treatment text as a factor with levels ordered by TRTA
+  ALT2 <- ALT2 %>%
+    mutate(TREATTXT = factor(TRTP, levels = TREATfac$TRTA))
+
+  #Filter for specific weeks and abnormal lab results (HIGH or LOW)
+  ALT3 <- ALT2 %>%
+    filter(WEEK %in% c(0, 1, 2, 4, 8, 16)) %>%
+    filter(LBNRIND %in% c("HIGH", "LOW"))
+
+  #Create the plot
+  plot4 <- ALT2 %>%
+    filter(WEEK %in% c(0, 1, 2, 4, 8, 16)) %>%
+    ggplot(mapping = aes(x = LBSTRESN, y = as.factor(WEEK))) +
+    coord_cartesian(xlim=c(0, 150)) +
+    stat_dotsinterval(slab_alpha = 0) +
+    geom_point(data = ALT3, color = "red") + 
+    labs(x = x_label,
+       y = y_label)
+
+  ggdraw(plot4) + 
+    draw_label("DRAFT", color = "grey", alpha=0.3, size = 75, angle = 45) 
+
+}
+
+
+#Call the function with dataset and axis labels
+graph("https://github.com/phuse-org/phuse-scripts/raw/master/data/adam/cdisc/adlbc.xpt", "Alanine Aminotransferase U/L","Week")
+```
