--- a/MiniProject13.Rmd
+++ b/MiniProject13.Rmd
@@ -62,7 +62,7 @@ adsl_saf = import("https://github.com/phuse-org/phuse-scripts/raw/master/data/ad
     group_by( TRT01AN, TRT01A  ) %>%
     count(name = "N")
 
-  ## Calculating count for each category of SEX
+  ## Calculating count for each category of AGEGR1
       
   small_n_cnt = adsl_saf  %>%
            group_by( TRT01AN, TRT01A,  AGEGR1 ) %>%
@@ -82,7 +82,7 @@ BIGNcnt =  adsl_saf   %>%
 group_by( TRT01AN, TRT01A  ) %>%
 count(name = "N")
 
-  ## Calculating count for each category of SEX
+  ## Calculating count for each category of RACE
 
 small_n_cnt = adsl_saf  %>%
 group_by( TRT01AN, TRT01A, RACE, SEX ) %>%
@@ -143,7 +143,7 @@ BIGNcnt =  adsl_saf   %>%
   group_by( TRT01AN, TRT01A  ) %>%
   count(name = "N")
 
-## Calculating count for each category of SEX
+## Calculating count for each category of AGEGR1
 
 small_n_cnt = adsl_saf  %>%
   group_by( TRT01AN, TRT01A,  AGEGR1 ) %>%
@@ -163,7 +163,7 @@ BIGNcnt =  adsl_saf   %>%
   group_by( TRT01AN, TRT01A  ) %>%
   count(name = "N")
 
-## Calculating count for each category of SEX
+## Calculating count for each category of RACE
 
 small_n_cnt = adsl_saf  %>%
   group_by( TRT01AN, TRT01A, RACE, SEX ) %>%
